# language_interoperability

./: .gitignore  Foo.cpp  Foo.hpp  Makefile  c_calling_cpp.c  cppMin.cpp  foo.h  foo_capi.cpp  foo_cdef.f90  foo_mod.f90  fortran_calling_c_max.f90  hello.f90  license  max.c  readme.md
c_calling_cpp/: Makefile  cppMin.cpp  main.c
c_calling_cpp_with_classes/: Makefile  main.c  robot.cpp  robot.hpp
c_calling_kotlin_native/: Makefile  c_calling_kotlin_native.kt  main.c
c_calling_rust/: Cargo.toml  Makefile  main.c
c_calling_rust_with_dynamic_array_passing/: Cargo.toml  Makefile  main.c
c_calling_rust_with_dynamic_array_passing/src/: lib.rs
cpp_calling_python_using_pybind11/: CMakeLists.txt  calculator.py  main.cpp  readme.md
cpp_calling_python_with_classes_using_pybind11/: CMakeLists.txt  main.cpp  readme.md  robot.py
fortran_calling_c/: Makefile  cMax.c  main.f90
fortran_calling_c_with_dynamic_array_passing/: Makefile  lib.c  main.f90
fortran_calling_cpp/: Makefile  cppMin.cpp  cppMin.hpp  main.f90
fortran_calling_cpp_with_classes/: CMakeLists.txt  Makefile  main.f90  robot.cpp  robot.h
fortran_calling_python_through_rust_using_pyo3/: .gitignore  CMakeLists.txt  Cargo.toml  pyproject.toml
fortran_calling_python_through_rust_using_pyo3/src/: lib.rs
fortran_calling_python_using_cffi/: .gitignore  CMakeLists.txt  readme.md
fortran_calling_python_using_cffi/src/: python_library.py  python_library_api_build.py  python_module.py  python_module_api.h  python_module_api_build.py
fortran_calling_rust/: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  main.f90
fortran_calling_rust/src/: lib.rs
fortran_calling_rust_with_dynamic_array_passing/: Cargo.toml  Makefile
fortran_calling_rust_with_dynamic_array_passing/src/: lib.rs
python_calling_c/: Makefile  cMultiply.c  cMultiply.h  main.py
python_calling_cpp_using_pybind/: Makefile  cppMultiply.cpp
python_calling_cpp_using_pybind11/: main.py
python_calling_rust_using_pyo3/: Cargo.toml
python_calling_rust_via_pyo3/: main.py  readme.md
python_calling_rust_via_pyo3/src/: lib.rs
rust_calling_python_using_pyo3/: .gitignore  CMakeLists.txt  Cargo.toml  pyproject.toml  readme.md
rust_calling_python_using_pyo3/src/: main.rs
